attempt 7 to fix background issue on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,9 +3,9 @@ body{
     background-image: url("https://i.imgur.com/5vkTr0E.jpg");
     background-position: top;
     background-repeat: no-repeat;
-    background-size: 100vh;
+    background-size: cover;
     background-attachment: fixed;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     min-width: 500px;
 }
